<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ICT For Agriculture (IFA)</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- Home Page -->
    <string name="welcome">Welcome to IFA</string>
    <string name="welcome2">Welcome to ICT for Agriculture (IFA)</string>
    <string name="mission">Mission: Ensure maximum yield with real-time agricultural resources during pre-harvest and ensure balance market with scientific use of ICT for rural farmers.</string>
    <string name="mission1">An effort towards scientific practice in Agriculture in Nepal.</string>
    <string name="regards">With Regards</string>
    <string name="ICT_foter">ICT For Agriculture (IFA)</string>
    <string name="copyright">Copyright 2014 ICT For Agriculture. All rights reserved</string>

    <!-- About Page -->
    <string name="about_IFA">About IFA</string>
    <string name="content1">This apps provides the major crop and animal disease information and its medical solution. It provides the fertilizer requirement in different plants. This also provides best price rate offered by different traders and expected by different farmers for agro products. Similarly it provides 14 days weather forcast of major cities of Nepal to help farmers decide farming process.</string>
    <string name="content2">To get agricultural info and market info via SMS in ordinary mobile phone, farmers and traders need to be registered which is done by Data Facilitator.</string>
    <string name="run_by">Run By</string>
    <string name="supported_by">Supported By</string>
    <string name="local_partner">Local Partner</string>
    <string name="details">For detail information of IFA project, please visit www.ict4agri.com</string>
    <string name="reach_us">Reach us at ict4agri@gmail.com</string>

    <!-- Fertilizer Page -->
    <string name="fertilizer_title">Fertilizer Dose / Malkhads</string>
    <string name="spinner_title">Choose Crop</string>
    <string name="choose_crop">Choose Crop:</string>
    <string name="ropani">Ropani: </string>
    <string name="aana">Aana: </string>
    <string name="submit">Submit</string>
    <string name="enter_a_number">Enter a Number</string>

    <string-array name="crop_list">
        <item>Aalu</item>
        <item>Golveda</item>
        <item>Pyaaj</item>
        <item>Simi</item>
        <item>Bandaa</item>
        <item>Kauli</item>
        <item>Khursaani</item>
        <item>Schus</item>
        <item>Bodi</item>
        <item>Keraau</item>
        <item>Vaanta</item>
        <item>Karelaa</item>
        <item>Mulaa</item>
        <item>Saag</item>
        <item>Lasun</item>
        <item>Aduwaa</item>
        <item>Kaakro</item>
        <item>Gaajar</item>
        <item>Ghiraula</item>
        <item>Chamsur</item>
        <item>Palungo</item>
        <item>Pharsi</item>
        <item>Laukaa</item>
        <item>Kurilo</item>
        <item>Tarkaarivatmaas</item>
        <item>Dhaan</item>
        <item>Makai</item>
        <item>Gahu</item>
        <item>Kaauli</item>
    </string-array>

    <!-- Weather Page -->
    <string name="weather_title">मौसम जानकारी</string>
    <string name="location">कृपया स्थान छान्नुहोस्</string>
    <string name="day">कृपया दिन छान्नुहाेस्</string>
    <string name="source">Source: Accuweather.com </string>

    <string-array name="location">
        <item>बनेपा</item>
        <item>पनौती</item>
        <item>पाँचखाल</item>
        <item>काठमाडौँ</item>
        <item>धादिंग</item>
        <item>सिन्धुली गढी</item>
        <item>रामेछाप</item>
        <item>भैरहवा</item>
    </string-array>
    <string-array name="day">
        <item>० (आज)</item>
        <item>१ (भोली)</item>
        <item>२ (पर्सी)</item>
    </string-array>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Crop Disease</item>
        <item>Animal Disease</item>
        <item>Fertilizer Dose</item>
        <item>Market Info</item>
        <item>Weather Forecast</item>
        <item>Login</item>
    </string-array>

    <!-- crop disease List -->
    <string-array name="crop_disease">
        <item>आलु / Potato</item>
        <item>फूल्गोवी जात</item>
        <item>फल समूह</item>
        <item>लहरे तरकारी</item>
        <item>कोशे तरकारी</item>
        <item>धान</item>
        <item>मकै</item>
        <item>गहु</item>
    </string-array>

    <!-- Animal Disease List -->
    <string-array name="animal_disease">
        <item>गाई / Cow Buffalo</item>
        <item>भैसी / Fish</item>
        <item>माछा / Goat Sheep</item>
        <item>कुखुरा / Hens</item>
    </string-array>
    
    <!-- Login Page -->
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_whats_hot</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>

    <!--  -->

</resources>