<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/weather_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/weather_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider_line"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:layout_below="@+id/weather_title"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#CCC"
        android:padding="15dip" />

    <TextView
        android:id="@+id/choose_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider_line"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/location"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/choose_location_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_location"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:prompt="@string/location" />

    <TextView
        android:id="@+id/day"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_location_spinner"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/day"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/choose_day_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/day"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:prompt="@string/day" />

    <Button
        android:id="@+id/submitBtnWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/choose_day_spinner"
        android:text="@string/submit"
        android:layout_marginLeft="10dip" />

    <TextView
        android:id="@+id/source"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/submitBtnWeather"
        android:layout_marginLeft="10dp"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/source"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>