<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:paddingBottom="20dp"
        android:paddingLeft="50dip"
        android:paddingRight="50dip"
        android:text="@string/sign_in"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:hint="@string/username"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_et"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginLeft="50dip"
        android:layout_marginRight="50dip" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_et"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_in" />

</RelativeLayout>